# tree-sitter-gaptst

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-gaptst.h  tree-sitter-gaptst.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_gaptst/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
etc/: extract_corpus.sh  visualize_parse_tree.py
examples/: alternating_group.tst  corner_cases.tst  mini.tst
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  cornercases.txt  statements.txt  testcases.txt
test/highlight/: mini.tst
