[package]
name = "tree-sitter-GAPtst"
description = "GAPtst grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "GAPtst"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-GAPtst"
edition = "2024"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
